# fair-lnc-evaluation

./: .gitignore  README.md  pyproject.toml
examples/: fairnessbenchmarks.ipynb  standardMLdataset.ipynb
src/fair_lnc_evaluation/: classifier.py  data.py  empirical_evaluation.py  metrics.py  noise_injection.py
